# ai-code-review

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
docs/: REVIEW_INSTRUCTIONS.md
examples/: codex_review.rs  simple_review.rs
gui/: index.html  main.js  styles.css
src/: analyzer.rs  context.rs  context_simple.rs  error.rs  git.rs  investigator.rs  lib.rs  modules.rs  prompt.rs  result.rs  reviewer.rs  screenshot.rs  shared_finder.rs
src-tauri/: tauri.conf.json
src/parser/: mod.rs  python.rs  rust.rs  typescript.rs
src/utils/: fs.rs  mod.rs
tests/: git_tests.rs  integration_tests.rs  lifecycle_notepad.json  prompt_tests.rs  review_result_tests.rs  reviewer_tests.rs
