[package]
name = "ai-code-review"
version = "0.1.0"
edition = "2021"
description = "A generic AI-powered code review library with file watching support"
authors = ["yuuji"]
license = "MIT"
repository = "https://github.com/YuujiKamura/ai-code-review"
keywords = ["code-review", "ai", "gemini", "claude", "watch"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "ai_code_review"
path = "src/lib.rs"

[dependencies]
folder-watcher = { path = "../folder-watcher" }
cli-ai-analyzer = { path = "../cli-ai-analyzer" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
gui-shell = { path = "../tauri-gui-shell", optional = true }
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }

[features]
gui = [
    "gui-shell",
    "tauri",
    "tauri-plugin-opener",
    "tauri-plugin-dialog",
    "tauri-plugin-notification",
]

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
